# EnderForgeMC

./: .gitmodules  BUILD.md  CMakeLists.txt  COPYING.md  README.md  flake.nix
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: ECMQueryQt.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  QtVersionOption.cmake  QtVersionlessBackport.cmake
launcher/icons/: EFMCIcon.cpp  EFMCIcon.h  IconList.cpp  IconList.h
launcher/java/: JavaChecker.cpp  JavaCheckerJob.cpp  JavaCheckerJob.h  JavaInstallList.cpp  JavaInstallList.h  JavaUtils.cpp  JavaUtils.h
launcher/launch/: LaunchStep.cpp  LaunchStep.h  LaunchTask.cpp  LaunchTask.h
launcher/launch/steps/: CheckJava.cpp  CheckJava.h  LookupServerAddress.cpp  LookupServerAddress.h  PostLaunchCommand.cpp  PostLaunchCommand.h  PreLaunchCommand.cpp  PreLaunchCommand.h  QuitAfterGameStop.cpp  QuitAfterGameStop.h  TextPrint.h  Update.cpp  Update.h
launcher/meta/: BaseEntity.cpp  BaseEntity.h  Index.cpp  Index.h  JsonFormat.cpp  JsonFormat.h  Version.cpp  Version.h  VersionList.cpp  VersionList.h
launcher/minecraft/: AssetsUtils.cpp  AssetsUtils.h  Component.cpp  GradleSpecifier.h  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  Library.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.h  MinecraftUpdate.cpp  MinecraftUpdate.h  MojangVersionFormat.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  PackProfile.h  ProfileUtils.cpp  ProfileUtils.h  Rule.cpp  Rule.h  VersionFile.cpp  VersionFile.h  World.cpp  World.h  WorldList.cpp  WorldList.h
launcher/minecraft/auth/: AccountData.cpp  (+10 more)
launcher/net/: ByteArraySink.h  ChecksumValidator.h  Download.cpp  Download.h  FetchFlameAPIKey.cpp  FetchFlameAPIKey.h  FileSink.cpp  FileSink.h  HttpMetaCache.cpp  HttpMetaCache.h  MetaCacheSink.cpp  MetaCacheSink.h  NetAction.h  NetJob.cpp  NetJob.h  NetUtils.h  PasteUpload.cpp  PasteUpload.h  Sink.h  Upload.cpp  Upload.h  Validator.h
launcher/news/: NewsChecker.cpp  NewsChecker.h  NewsEntry.cpp  NewsEntry.h
launcher/screenshots/: ImgurAlbumCreation.cpp  ImgurAlbumCreation.h  ImgurUpload.cpp  ImgurUpload.h
launcher/settings/: INIFile.cpp  INIFile.h  INISettingsObject.cpp  INISettingsObject.h  OverrideSetting.cpp  OverrideSetting.h  PassthroughSetting.cpp  PassthroughSetting.h  Setting.cpp  Setting.h  SettingsObject.cpp  SettingsObject.h
launcher/tasks/: Task.cpp  Task.h
launcher/translations/: TranslationsModel.cpp  TranslationsModel.h
libraries/: README.md
libraries/launcher/: CMakeLists.txt
libraries/launcher/net/minecraft/: Launcher.java
libraries/launcher/org/enderforgemc/: EntryPoint.java  Launcher.java  LauncherFactory.java
libraries/launcher/org/enderforgemc/applet/: LegacyFrame.java
libraries/launcher/org/enderforgemc/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/enderforgemc/impl/: OneSixLauncher.java
libraries/launcher/org/enderforgemc/utils/: Parameters.java  Utils.java
nix/: NIX.md  default.nix  unwrapped.nix
program_info/: CMakeLists.txt  README.md  enderforgemc.6.scd  enderforgemc.manifest.in  enderforgemc.qrc  enderforgemc.rc.in  genicons.sh  org.enderforgemc.EnderForgeMC.desktop.in  org.enderforgemc.EnderForgeMC.metainfo.xml.in
tests/: Library_test.cpp  Packwiz_test.cpp  ResourceFolderModel_test.cpp  ResourcePackParse_test.cpp  TexturePackParse_test.cpp  Version_test.cpp
(+46 files in other folders)
